# capture

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
assets/: Application.rsf
include/: RunAutomaticTests.h  RunTests.h  WriteExitCode.h  capture.hpp
include/capture/: RunAutomaticTests.h
include/capture/config/: CaptureConfig.h  CaptureKeys.h  CatchOption.h  CatchValueOption.h
include/capture/interactive/: ConfigMenu.h  InteractiveSession.h  IsRunningInteractively.h
include/capture/resources/: Console.h  RomFS.h
include/config/: CaptureConfig.h  CaptureKeys.h  CatchOption.h  CatchValueOption.h  InvalidConfigurationException.h
include/interactive/: ConfigMenu.h  InteractiveSession.h  Keys.h  SoftwareKeyboard.h
include/resources/: GFX.h
make/: AssertEnvironment  AssertParameters  Utility
romfs/: CaptureConfig.toml
source/: RunAutomaticTests.cpp  RunTests.cpp  WriteExitCode.cpp  main.cpp  test.cpp
source/config/: CaptureConfig.cpp  CaptureKeys.cpp  CatchOption.cpp  CatchValueOption.cpp  InvalidConfigurationException.cpp
source/interactive/: ConfigMenu.cpp  InteractiveSession.cpp  IsRunningInteractively.cpp  Keys.cpp  SoftwareKeyboard.cpp
